# hyprhist

./: .gitignore  AGENTS.md  Cargo.toml  flake.nix  readme.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/lib/: cli.rs  daemon.rs  event_history.rs  hypr_events.rs  hypr_utils.rs  lib.rs  socket.rs  types.rs
tests/: hello_world.rs
