[package]
name = "hyprhist"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hyprhist"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
chrono = { version = "0.4.42", features = [] }
hyprland = "0.4.0-beta.3"
log = "0.4.28"
env_logger = "0.11.6"
tokio = "1.48.0"
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
